// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Table::HeaderCell diplays the default cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper"
    >
      <div>
        ACTIONS
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell displays More fields dropdown after the last cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper"
    >
      <div>
        ACTIONS
      </div>
    </div>
    <div>
      ShowMoreFieldsDropdown
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell displays sortable field cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper"
    >
      <div
        class="clickable"
      >
        <span
          class="field-title"
        >
          Created
        </span>
      </div>
    </div>
  </div>
</td>
`;

exports[`ViewTable::Table::HeaderCell does not display ActionsComponent for non-main field cell 1`] = `
<td>
  <div>
    <div
      class="cell-wrapper"
    >
      <div
        class=""
      >
        <span
          class="field-title"
        >
          Subject
        </span>
      </div>
    </div>
  </div>
</td>
`;
